--- a/CrmPackage/WebResources/Web Page (HTML)/arup_OracleRequestListenerDiagnostics.html
+++ b/CrmPackage/WebResources/Web Page (HTML)/arup_OracleRequestListenerDiagnostics.html
@@ -14,82 +14,105 @@
     <div class="container-fluid">
         <div class="row">
             <h1> Oracle Request Listener Diagnostics</h1>
-    </div>
-    <div class="row">&nbsp;</div>
-    <div class="row">
-        <button id="PingButton">Ping Oracle Request Listener</button>  CRM Action A03 --> CodeActivity --> ServiceEndpoint --> Ping Azure App service
-        <div id="ping">
-            <textarea id="PingResult" rows="4" class="arup-clear form-control" placeholder="Ping result"></textarea>
         </div>
-    </div>
-            <div class="row">
-                <div id="checkConnection">
-                    <button id="CheckConnectionButton">Check connection to Oracle</button> CRM Action A14 --> CodeActivity --> ServiceEndpoint --> Azure App service (Check Endpoint) --> Oracle database
-                    <textarea id="CheckConnectionResult" rows="10" class="arup-clear form-control" placeholder="Check connection result"></textarea>
-                </div>
+        <div class="row">&nbsp;</div>
+        <div class="row">
+            <button id="PingButton">Ping Oracle Request Listener</button>  CRM Action A03 --> CodeActivity --> ServiceEndpoint --> Ping Azure App service
+            <div id="ping">
+                <textarea id="PingResult" rows="4" class="arup-clear form-control" placeholder="Ping result"></textarea>
             </div>
         </div>
-        <script type="text/javascript">
-            (function (doc, win, add, remove, loaded, load) {
-                doc.ready = new Promise(function (resolve) {
-                    if (doc.readyState === 'complete') {
-                        resolve();
-                    } else {
-                        function onReady() {
-                            resolve();
-                            doc[remove](loaded, onReady, true);
-                            win[remove](load, onReady, true);
-                        }
-                        doc[add](loaded, onReady, true);
-                        win[add](load, onReady, true);
-                    }
-                });
-            })(document, window, 'addEventListener', 'removeEventListener', 'DOMContentLoaded', 'load');
+        <div class="row">
+            <div id="checkConnection">
+                <button id="CheckConnectionButton">Check connection to Oracle</button> CRM Action A14 --> CodeActivity --> ServiceEndpoint --> Azure App service (Check Endpoint) --> Oracle database
+                <textarea id="CheckConnectionResult" rows="10" class="arup-clear form-control" placeholder="Check connection result"></textarea>
+            </div>
+        </div>
+        <div>
+            <br/>
+            <button id="ProdApplicationInsights">Production Application Insights</button>
+            <button id="UATApplicationInsights">UAT Application Insights</button>
+            <button id="DevApplicationInsights">Dev Application Insights</button>
+        </div>
+    </div>
+<script type="text/javascript">
+    // Add document.ready() promise.
+    (function (doc, win, add, remove, loaded, load) {
+        doc.ready = new Promise(function (resolve) {
+            if (doc.readyState === 'complete') {
+                resolve();
+            } else {
+                function onReady() {
+                    resolve();
+                    doc[remove](loaded, onReady, true);
+                    win[remove](load, onReady, true);
+                }
+                doc[add](loaded, onReady, true);
+                win[add](load, onReady, true);
+            }
+        });
+    })(document, window, 'addEventListener', 'removeEventListener', 'DOMContentLoaded', 'load');
 
-            function AddButtonCallback(buttonId, actionName, resultAreaId) {
-                document.getElementById(buttonId).addEventListener('click', function () {
-                    var arup_actionrequest = {
-                        getMetadata: function () {
-                            return {
-                                boundParameter: null,
-                                parameterTypes: {},
-                                operationType: 0,
-                                operationName: actionName
-                            };
-                        }
+    function AddButtonCallback(buttonId, actionName, resultAreaId) {
+        document.getElementById(buttonId).addEventListener('click', function () {
+            var arup_actionrequest = {
+                getMetadata: function () {
+                    return {
+                        boundParameter: null,
+                        parameterTypes: {},
+                        operationType: 0,
+                        operationName: actionName
                     };
-
-                    Xrm.WebApi.online.execute(arup_actionrequest).then(
-                        function success(result) {
-                            if (result.ok) {
-                                var resultArea = document.getElementById(resultAreaId);
-                                if (result.responseText) { // Cope with different responses in web resource vs dashboard.?
-                                    var results = JSON.parse(result.responseText);
-                                    resultArea.innerText = results.Result;
-                                } else {
-                                    result.json().then(function (response) {
-                                        resultArea.innerText = response.Result;
-                                    },
-                                        function error(e) {
-                                            debugger;
-                                            console.log("Error calling action " + e );
-                                        });
-                                }
-                            }                        },
-                        function (error) {
-                            debugger;
-                            var resultArea = document.getElementById(resultAreaId);
-                            resultArea.value =  "Error calling Action " + actionName + "\r\r" + error.message;
-                            Xrm.Utility.alertDialog(actionName + error.message);
-                        }
-                    );
-                });
+                }
             };
 
-            document.ready.then(() => {
-                AddButtonCallback("PingButton", "arup_A03Ping", "PingResult");
-                AddButtonCallback("CheckConnectionButton", "arup_A14CheckConnection", "CheckConnectionResult");
-            });
-        </script>
+            Xrm.WebApi.online.execute(arup_actionrequest).then(
+                function success(result) {
+                    if (result.ok) {
+                        var resultArea = document.getElementById(resultAreaId);
+                        if (result.responseText) { // Cope with different responses in web resource vs dashboard.?
+                            var results = JSON.parse(result.responseText);
+                            resultArea.innerText = results.Result;
+                        } else {
+                            result.json().then(function (response) {
+                                    resultArea.innerText = response.Result;
+                                },
+                                function error(e) {
+                                    debugger;
+                                    console.log("Error calling action " + e );
+                                });
+                        }
+                    }                        },
+                function (error) {
+                    debugger;
+                    var resultArea = document.getElementById(resultAreaId);
+                    resultArea.value =  "Error calling Action " + actionName + "\r\r" + error.message;
+                    Xrm.Utility.alertDialog(actionName + error.message);
+                }
+            );
+        });
+    };
+
+    // Open application isngihts in a new tab.
+    function AddApplicationInsightsButtonCallback(buttonId, urlMatch, targetUrl) {
+        debugger;
+        if (!document.location.hostname.startsWith(urlMatch)) {
+            document.getElementById(buttonId).hidden=true;
+        } else {
+            document.getElementById(buttonId).addEventListener('click',
+                function() {
+                    window.open(targetUrl,buttonId)
+                });
+        }
+    };
+
+    document.ready.then(() => {
+        AddButtonCallback("PingButton", "arup_A03Ping", "PingResult");
+        AddButtonCallback("CheckConnectionButton", "arup_A14CheckConnection", "CheckConnectionResult");
+        AddApplicationInsightsButtonCallback("ProdApplicationInsights", "arupcrm", 'https://portal.azure.com/#@4ae48b41-0137-4599-8661-fc641fe77bea/resource/subscriptions/17bd5e73-b7db-4291-a621-6d393cc0cff4/resourceGroups/arup-crm-cloud-prod-rg/providers/Microsoft.Insights/components/crm-interfaces-prod-insights/searchV1');
+        AddApplicationInsightsButtonCallback("UATApplicationInsights", "arupuat", 'https://portal.azure.com/#@4ae48b41-0137-4599-8661-fc641fe77bea/resource/subscriptions/50e9be8b-b913-4b42-88de-b175f85f29eb/resourceGroups/arup-crm-cloud-uat-rg/providers/Microsoft.Insights/components/crm-interfaces-uat-insights/searchV1');
+        AddApplicationInsightsButtonCallback("DevApplicationInsights", "arupdev", 'https://portal.azure.com/#@4ae48b41-0137-4599-8661-fc641fe77bea/resource/subscriptions/d8263c9e-b9dd-425c-bb74-056f27f1cd96/resourceGroups/arup-crm-cloud-dev-rg/providers/Microsoft.Insights/components/crm-interfaces-dev-insights/searchV1');
+    });
+</script>
 </body>
 </html>
