--- a/CrmPackage/WebResources/Web Page (HTML)/arup_FrameworkButtons.htm
+++ b/CrmPackage/WebResources/Web Page (HTML)/arup_FrameworkButtons.htm
@@ -218,34 +218,36 @@
             Log("parent.document.readyState " + parent.document.readyState);
             if (parent.formContext != null && parent.document.readyState == "complete") {
 
-				//recordid will be frameworkid or frameworksecureid depending on the call of the respective form
+                //recordid will be frameworkid or frameworksecureid depending on the call of the respective form
                 //id parent.document.location.href.split("&id=")[1] is null or undefined , it means record type is New record and no id will exist
-			//	if (parent.document.location.href.split("&id=")[1] != null) {
-					var recordid = parent.document.location.href.split("&id=")[1].substring(0, 36);
-					var parentEntityRefId = parent.formContext.entityReference.id.replace('{', '').replace('}', '');
-					Log("recordid " + recordid);
-					Log("parentEntityRefId " + parentEntityRefId);
+                //	if (parent.document.location.href.split("&id=")[1] != null) {
+                var parts = parent.document.location.href.split("&id=");
+                if (parts.length > 1) { // Check to see if we have an existing framework where it is valid to display the buttons. (i.e. don't display for new form)
+                    var recordid = parts[1].substring(0, 36);
+                    var parentEntityRefId = (parent.entityId || "" ).replace('{', '').replace('}', '');
+                    Log("recordid " + recordid);
+                    Log("parentEntityRefId " + parentEntityRefId);
 
-					if (recordid.toUpperCase() == parentEntityRefId) {
-						var formContext = parent.formContext;
-						// Tab number is specified as part of the data argument to the web resource.
-						tabName = location.search.split("=")[1];
-						//tabNumber = formContext.Arup.GetTabNumber(formContext, tabName);
-						tabNumber = parent.Arup.GetTabNumber(formContext, tabName);
-						console.log("Setup for tab " + tabName);
-						setupButtonsForTab(formContext, tabNumber);
-						parent.Arup.OnDisplayingTab(formContext, tabName,
-							function () {
-								setupButtonsForTab(formContext, tabNumber);
-							});
-					}
-					else {
-						setTimeout(function () { GetFormContextandInitialize(); }, 1000);
-					}
-			//	}
-            }
-            else {
-                setTimeout(function () { GetFormContextandInitialize(); }, 1000);
+                    if (recordid.toUpperCase() == parentEntityRefId) {
+                        var formContext = parent.formContext;
+                        // Tab number is specified as part of the data argument to the web resource.
+                        tabName = location.search.split("=")[1];
+                        //tabNumber = formContext.Arup.GetTabNumber(formContext, tabName);
+                        tabNumber = parent.Arup.GetTabNumber(formContext, tabName);
+                        console.log("Setup for tab " + tabName);
+                        setupButtonsForTab(formContext, tabNumber);
+                        parent.Arup.OnDisplayingTab(formContext,
+                            tabName,
+                            function() {
+                                setupButtonsForTab(formContext, tabNumber);
+                            });
+                    } else {
+                        setTimeout(function() { GetFormContextandInitialize(); }, 1000);
+                    }
+                }
+                //	}
+            } else {
+                setTimeout(function() { GetFormContextandInitialize(); }, 1000);
             }
         }
 
@@ -282,6 +284,7 @@
         // refresh the buttons is registered in arup_opportunitybuttoncomamnds.js.
         var tabName;
         var tabNumber;
+        debugger;
                 document.onreadystatechange = function () {
                     if (document.readyState == "complete") {
                         if (location.search == "") {
